force-app/main/default/objects/PolicyMaster__c/PolicyMaster__c.object-meta.xml
<CustomObject>
    <label>Policy Master</label>
    <nameField>
        <label>Policy Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>