force-app/main/default/objects/PolicyMaster__c/fields/CoverageType__c.field-meta.xml
<CustomField>
    <fullName>CoverageType__c</fullName>
    <label>Coverage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Motor / Vehicle Insurance</fullName>
            </value>
            <value>
                <fullName>Health Insurance</fullName>
            </value>
            <value>
                <fullName>Life Insurance</fullName>
            </value>
            <value>
                <fullName>Property / Home Insurance</fullName>
            </value>
            <value>
                <fullName>Travel Insurance</fullName>
            </value>
            <value>
                <fullName>Commercial / Business Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>