force-app/main/default/objects/PolicyMaster__c/fields/PriceRange__c.field-meta.xml
<CustomField>
    <fullName>PriceRange__c</fullName>
    <label>Price Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1,000 - 2,000</fullName>
            </value>
            <value>
                <fullName>2,000 - 3,000</fullName>
            </value>
            <value>
                <fullName>3,000 - 4,000</fullName>
            </value>
            <value>
                <fullName>4,000 - 5,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>