force-app/main/default/objects/PolicyMaster__c/fields/RiskCategory__c.field-meta.xml
<CustomField>
    <fullName>RiskCategory__c</fullName>
    <label>Risk Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CoverageType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comprehensive Coverage</fullName>
            </value>
            <value>
                <fullName>Third-Party Liability</fullName>
            </value>
            <value>
                <fullName>Collision Coverage</fullName>
            </value>
            <value>
                <fullName>Personal Accident Cover</fullName>
            </value>
            <value>
                <fullName>Theft Protection</fullName>
            </value>
            <value>
                <fullName>Fire &amp; Natural Calamity Cover</fullName>
            </value>
            <value>
                <fullName>Own Damage Only</fullName>
            </value>
            <value>
                <fullName>Zero Depreciation Cover</fullName>
            </value>
            <value>
                <fullName>Engine Protection</fullName>
            </value>
            <value>
                <fullName>Roadside Assistance</fullName>
            </value>
            <value>
                <fullName>Individual Health Cover</fullName>
            </value>
            <value>
                <fullName>Family Floater</fullName>
            </value>
            <value>
                <fullName>Group Health Policy</fullName>
            </value>
            <value>
                <fullName>Critical Illness Cover</fullName>
            </value>
            <value>
                <fullName>Accident &amp; Disability Cover</fullName>
            </value>
            <value>
                <fullName>Maternity Cover</fullName>
            </value>
            <value>
                <fullName>Hospital Cash Cover</fullName>
            </value>
            <value>
                <fullName>Top-Up / Super Top-Up</fullName>
            </value>
            <value>
                <fullName>OPD (Outpatient Department) Cover</fullName>
            </value>
            <value>
                <fullName>International Medical Coverage</fullName>
            </value>
            <value>
                <fullName>Term Life Cover</fullName>
            </value>
            <value>
                <fullName>Whole Life Cover</fullName>
            </value>
            <value>
                <fullName>Endowment Policy</fullName>
            </value>
            <value>
                <fullName>Unit Linked Insurance Plan (ULIP)</fullName>
            </value>
            <value>
                <fullName>Money Back Policy</fullName>
            </value>
            <value>
                <fullName>Group Life Insurance</fullName>
            </value>
            <value>
                <fullName>Child Education Plan</fullName>
            </value>
            <value>
                <fullName>Retirement / Pension Plan</fullName>
            </value>
            <value>
                <fullName>Mortgage Protection Cover</fullName>
            </value>
            <value>
                <fullName>Building Structure Cover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>