force-app/main/default/objects/PolicyMaster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CoverageType__c</columns>
    <columns>RiskCategory__c</columns>
    <columns>PriceRange__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>